--- a/src/components/ranking/ranking.module.scss
+++ b/src/components/ranking/ranking.module.scss
@@ -5,6 +5,7 @@
 
 .rankingTableSelect {
   margin: 10px 0px;
+  max-width: 340px;
 }
 
 .table{
